--- a/microservice-produits.properties
+++ b/microservice-produits.properties
@@ -15,4 +15,4 @@ mes-configs.limitDeProduits= 1
 
 #Eureka
 eureka.client.serviceUrl.defaultZone: http://localhost:9102/eureka/
-me=me@ymail.fr
+me=me@ymail.com
