--- a/microservice-produits.properties
+++ b/microservice-produits.properties
@@ -11,8 +11,8 @@ spring.datasource.sql-script-encoding=UTF-8
 
 #Nos configurations
 
-mes-configs.limitDeProduits= 3
+mes-configs.limitDeProduits= 1
 
 #Eureka
 eureka.client.serviceUrl.defaultZone: http://localhost:9102/eureka/
-me=me@hotmail.com
+me=me@hotmail.fr
