--- a/microservice-produits.properties
+++ b/microservice-produits.properties
@@ -12,6 +12,7 @@ spring.datasource.sql-script-encoding=UTF-8
 #Nos configurations
 
 mes-configs.limitDeProduits= 3
+mes-configs.message= 3
 
 #Eureka
 eureka.client.serviceUrl.defaultZone: http://localhost:9102/eureka/
