--- a/microservice-produits.properties
+++ b/microservice-produits.properties
@@ -11,9 +11,9 @@ spring.datasource.sql-script-encoding=UTF-8
 
 #Nos configurations
 
-#mes-configs.limitDeProduits= 4
-#mes-configs.message= 4
-limitDeProduits= 5
+mes-configs.limitDeProduits= 4
+mes-configs.message= 4
+
 #Eureka
 eureka.client.serviceUrl.defaultZone: http://localhost:9102/eureka/
 me=me@hotmail.fr3
